# acts

./: .clang-format  .clang-tidy  .clang-tidy-headers  .gersemirc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .kodiak.toml  .labels.yml  .merge-sentinel.yml  .oclint  .policy.yml  .pre-commit-config.yaml  .static_analysis_limits.yml  .travis.yml  .zenodo.json  ACTSVersion.h  ANALYSIS.md  AUTHORS  AUTHORS.md  CITATION.cff  CKF_VolLayer.py  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CTestConfig.cmake  Makefile  PROGRESS.md  README.md  REFACTORING_PLAN.md  REFACTOR_STRATEGY.md  REUSE.toml  Root_python.py  Updates.txt  ^1  (+41 more)
Alignment/: CMakeLists.txt  README.md
CI/: README.md  REUSE.toml  apply_clang_format  athena_build.sh  build_acts  bump_versions.py  changeset.sh  check_boost_eigen_versions.sh  check_boost_test_macro.sh  check_codegen  check_codegen_dependencies.sh  check_doxygen  check_end_of_file.py  check_end_of_file.sh  check_for_JIRA_ref  check_format  check_format_local  check_fpe_masks.py  check_include_guards.py  check_license  check_license.py  check_license_local  check_math_macros.py  check_pr_labels.py  check_pragma_once.sh  check_requirements.sh  check_size_t.py  check_smearing_config.py  check_spelling  check_type_t.py  check_unused_files.py  cibuildwheel.sh  cliff.toml  codespell_ignore.txt  codespell_ignore_core.txt  codespell_ignore_examples.txt  comment_merge_request  config.yml  coverage_environment.sh  ctest2junit.xsl  (+69 more)
CI/athena/: athena_build.sh  package_filters.txt  preserve_env.sh
CI/clang_tidy/: check_clang_tidy.py  filter.yml  item.py  limits.yml  merge.py  parse_clang_tidy.py  requirements.in  requirements.txt  run_clang_tidy.py  run_clang_tidy.sh  run_clang_tidy_headers.sh  run_clang_tidy_pr.py
CI/commands/: pr_commands.py  requirements.in  requirements.txt
CI/cppcheck/: filter.yml  run_cppcheck_pr.py
CI/dependencies/: activate.sh  apt_mirror.sh  download_geant4_datasets.py  download_models.py  download_models.sh  git-wrapper.sh  opengl.sh  run.sh  select_lockfile.py  setup.sh  setup_spack.sh
CI/exatrkx/: datagen.py  requirements.txt  run_datagen.sh  run_training.sh
CI/fpe_masks/: requirements.in  requirements.txt
CI/gitlab/: clang_tidy.yml  exatrkx.yml  lcg.yml  ubuntu.yml
CI/iwyu/: README.md  filter.py  filter.yaml  mapping-boost.imp  mapping-eigen.imp  mapping-pythia.imp  mapping.imp
CI/physmon/: Snakefile  ckf_truth_smeared.yml  comment_template.md  default.yml  fpe_masks.yml  full_chain_odd.yml  generate_comment.py  gx2f.yml  particles_final_config.yml  particles_initial_config.yml  phys_perf_mon.sh  physmon.py  physmon_common.py  physmon_traccc_common.py  pythia8_ttbar_config.yml  reference.py  reference.sha256  setup.sh  simulation_config.yml  summary.py  tracksummary_ckf_config.yml  truth_tracking.py  truth_tracking.yml  vertexing_config.yml  vertexing_ttbar_config.yml
CI/scripts/: fetch_sonarcloud_report.py
Core/: ACTSVersion.h.in  ActsVersion.hpp.in  CMakeLists.txt
Core/Algebra/: CMakeLists.txt
Core/CoreIdentifier/: CMakeLists.txt
Core/CoreInterfaces/: CMakeLists.txt  ChangeLog
Core/CoreUtils/: CMakeLists.txt
Core/Identifier/: CMakeLists.txt
Core/cmake/: ACTSConfig.cmake
Core/scripts/: genMatrixCode.py  print_units_physical_constants.py
Core/src/: ActsVersion.cpp
Detray/: CMakeLists.txt  CMakePresets.json  README.md  pytest.ini
Detray/CI/: ci_setup.sh  find_f64_ptx.py
Detray/cmake/: detray-compiler-options-cpp.cmake  detray-compiler-options-cuda.cmake  detray-compiler-options-hip.cmake  detray-compiler-options-sycl.cmake  detray-config.cmake.in  detray-functions.cmake  detray-packaging.cmake
Detray/core/: CMakeLists.txt
Detray/data/: detray_data_get_files.sh
Detray/detectors/: CMakeLists.txt  README.md  generate_metadata.sh
Detray/io/: CMakeLists.txt
Detray/plugins/: CMakeLists.txt
Detray/python/: CMakeLists.txt  module_init.py.in  setup.sh.in
Detray/tests/: CMakeLists.txt
Detray/tutorials/: CMakeLists.txt
Examples/: CMakeLists.txt  README.md  REUSE.toml
Examples/Algorithms/: CMakeLists.txt
Examples/Configs/: betheHeitler_geantSim_cdf_nC6_O5.json  colliderml_geo_map.parquet  generic-alignment-geo.json  generic-digi-geometric-config.json  generic-digi-smearing-config.json  generic-input-config.json  generic-pixel-sstrips-lstrips-spacepoints.json  generic-seeding-config.json  odd-digi-geometric-config-notime.json  odd-digi-geometric-config.json  odd-digi-smearing-config-notime-gen3.json  odd-digi-smearing-config-notime.json  odd-digi-smearing-config.json  odd-seeding-config.json  odd-strip-spacepoint-selection.json  (+3 more)
Fatras/: CMakeLists.txt  README.md
IntegrationTests/: ATLSeedingIntegrationTest.cpp  CMakeLists.txt  PropagationTestBase.hpp  PropagationTestHelper.hpp  PropagationTests.cpp  PropagationTestsAtlasField.cpp  covariance_validation_fixture.hpp
Legacy/: CMakeLists.txt
Python/: CMakeLists.txt  conftest.py
Standalone/: CMakeLists.txt
Tests/: CMakeLists.txt  REUSE.toml
Traccc/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Modules.hpp  SolenoidField.ipynb  annotated_api.rst  authors.rst  codeguide.md  conf.py.in  doxygen.config  doxygen.config.in  doxygen_layout.xml  getting_started.md  grid_axis.md  index.rst  requirements.txt  units.rst
docs/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  REUSE.toml  SNIPPETS.md  SolenoidField.ipynb  acts-version-manager.css  acts-version-manager.js  acts.md  acts_project.md  authors.rst  changelog.rst  check_links.sh  cmake_option_dependencies.py  codeguide.md  conf.py  contributionguide.rst  custom.css  environment.yml  getting_started.md  glossary.md  header.html  index.md  index.rst  kalman_filter_deep_dive.html  kalman_filter_deep_dive.md  known-warnings.txt  license.rst  linkcheckerrc  main_page.md  namespaces.dox  namespaces.hpp  parse_cmake_options.py  references.bib  requirements.in  requirements.txt  serve.py  tex-mml-chtml.js  (+7 more)
(+11558 files in other folders)
